# lumenqa

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run-tests.sh  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  benchmarks.md  index.md  installation.md  pylux-syntax.md  quickstart.md
docs/concepts/: dom-engine.md  intent-trees.md  lumenvm.md
docs/guides/: best-practices.md
docs/migration/: from-cypress.md  from-playwright.md  from-selenium.md
examples/: lumen.yml
examples/advanced/: api_integration.lux  parallel_tests.lux
examples/basic/: hello_world.lux  login_test.lux
src/lumenqa/: __init__.py  __main__.py  cli.py  live_runner.py  parser.py  reporter.py  runner.py  test_data.py  version.py
